--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,12 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
+  date:
+    formats:
+      default: "%d/%m/%Y"
+  time:
+    formats:
+      default: "%d/%m/%Y %H:%M"
   project:
     project: "Project"
     projects: "Projects"
