Adding model to project

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -134,6 +134,7 @@ ru:
     edit_product: "Редактировать продукт"
     article: "Артикул"
     price: "Стоимость"
+    model: "Модель"
   factories: 
     factory: "Фабрики"
   styles: 
